--- a/intellic-integration/public/netlify-contact.html
+++ b/intellic-integration/public/netlify-contact.html
@@ -17,5 +17,5 @@
   <label for="message">Message:</label>
   <textarea name="message" id="message" required></textarea>
 
-  <button type="submit">Send Message</button>
+  <button type="submit">Submit</button>
 </form>
