--- a/intellic-integration/public/netlify-contact.html
+++ b/intellic-integration/public/netlify-contact.html
@@ -1,4 +1,4 @@
-<form class="p-6" method="POST" name="contact" data-netlify="true">
+<form class="p-6" method="POST" name="contact" data-netlify="true" action="/">
   <input type="hidden" name="form-name" value="contact" />
 
   <label for="first-name">First Name:</label>
