cover letter fix for forms

--- a/intellic-integration/public/netlify-careers.html
+++ b/intellic-integration/public/netlify-careers.html
@@ -13,8 +13,8 @@
   <label for="telephone">Phone Number (Optional):</label>
   <input type="tel" name="telephone" />
 
-  <label for="message">Message:</label>
-  <textarea name="message" id="message" required></textarea>
+  <label for="cover-letter">Cover Letter:</label>
+  <textarea name="cover-letter" id="cover-letter"></textarea>
 
   <label for="resume">Resume:</label>
   <input type="file" name="resume" id="resume" required />
